K8s/Istio/virtual-service-all-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cart
  namespace: robot-shop
spec:
  hosts:
  - cart.robot-shop.svc.cluster.local
  http:
  - route:
    - destination:
        host: cart.robot-shop.svc.cluster.local
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalogue
  namespace: robot-shop
spec:
  hosts:
  - catalogue.robot-shop.svc.cluster.local
  http:
  - route:
    - destination:
        host: catalogue.robot-shop.svc.cluster.local
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mongodb
  namespace: robot-shop
spec:
  hosts:
  - mongodb.robot-shop.svc.cluster.local
  http:
  - route:
    - destination:
        host: mongodb.robot-shop.svc.cluster.local
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mysql
  namespace: robot-shop
spec:
  hosts:
  - mysql.robot-shop.svc.cluster.local
  http:
  - route:
    - destination:
        host: mysql.robot-shop.svc.cluster.local
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment
  namespace: robot-shop
spec:
  hosts:
  - payment.robot-shop.svc.cluster.local
  http:
  - route:
    - destination:
        host: payment.robot-shop.svc.cluster.local
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rabbitmq
  namespace: robot-shop
spec:
  hosts:
  - rabbitmq.robot-shop.svc.cluster.local
  http:
  - route:
    - destination:
        host: rabbitmq.robot-shop.svc.cluster.local
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
  namespace: robot-shop
spec:
  hosts:
  - ratings.robot-shop.svc.cluster.local
  http:
  - route:
    - destination:
        host: ratings.robot-shop.svc.cluster.local
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: redis
  namespace: robot-shop
spec:
  hosts:
  - redis.robot-shop.svc.cluster.local
  http:
  - route:
    - destination:
        host: redis.robot-shop.svc.cluster.local
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shipping
  namespace: robot-shop
spec:
  hosts:
  - shipping.robot-shop.svc.cluster.local
  http:
  - route:
    - destination:
        host: shipping.robot-shop.svc.cluster.local
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user
  namespace: robot-shop
spec:
  hosts:
  - user.robot-shop.svc.cluster.local
  http:
  - route:
    - destination:
        host: user.robot-shop.svc.cluster.local
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web
  namespace: robot-shop
spec:
  hosts:
  - web.robot-shop.svc.cluster.local
  http:
  - route:
    - destination:
        host: web.robot-shop.svc.cluster.local
        subset: v1
